Add advanced synchronization demos: BlockingQueue, Phaser, Exchanger, ThreadLocal - Rewrote SynchronizationUtilitiesDemo with real-world use cases   (Semaphore DB throttling, CountDownLatch service init, CyclicBarrier chunk processing) - Added BlockingQueueDemo: Producer-Consumer with LinkedBlockingQueue + Poison Pill shutdown - Added PhaserExchangerDemo: dynamic multi-phase pipeline + dual-buffer swap - Added ThreadLocalDemo: context isolation, data-leak bug demo, safe usage pattern - Rewrote README with detailed explanations, code snippets, and run commands for all demos - Updated pom.xml Java version to match installed JDK